# gemini-calling

./: .gitignore  README.md  pyproject.toml
gemini_calling/: __init__.py  client.py  keys.py  limits.py
