[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-calling"
version = "0.1.0"
description = "Lightweight Gemini API client with .env multi-key management"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
keywords = ["gemini", "google", "genai", "llm", "rest"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""

